# runik

./: .gitignore  .on-save.json  Cargo.toml  Taskfile.yml  makefile  readme.md
config/: args.yaml
maker/: build.sh  compress.sh  targets.yaml
maker/cargo_config/: config
src/: argparse.rs  config.rs  main.rs  processor.rs
